# opencapital

./: .gitignore  Makefile  README.md  plugins.json  pyproject.toml
.github/actions/plugin-promote/: action.yml  reconcile.sh
.github/plugins/: signers.yaml
.github/workflows/: ci.yml  images.yml  opencapital-cache-warm.yml  opencapital-release.yml  plugin-promote-check.yml  plugin-promote-reconcile.yml  plugin-release.yml  risingwave-macos-artifact.yml  wsl-rootfs-artifact.yml
dataplane/postgres/init/: 01-schema.sql  02-portfolios.sql  03-replication-role.sql  04-replication-hba.sh
dataplane/risingwave/: Dockerfile  apply.sh  risingwave.toml
dataplane/risingwave/migrations/: 2026-06-27-daily-price-grid.sql  V002__plugin_id_columns.sql  V003__entity_views.sql  V004__closures_cycles_entities.sql  V005__instrument_position_size.sql  V006__flows_cycles_widen.sql  V007__view_contract_normalization.sql
dataplane/risingwave/schemas/: 00-bootstrap.sql
dataplane/risingwave/test/: cash_daily_close_diff.sql  daily_close_diff.sql  fx_filled_check.sql  golden_snapshot.sql  health_probe.sql  instrument_per_tick_new.sql  (+4 more)
dataplane/wsl/: Dockerfile.rootfs  supervisor.sh
docs/superpowers/: HANDOFF-serviceless-migration.md
lib/datakey/: datakey.go  datakey_test.go  go.mod
lib/instance-bootstrap/: bootstrap.go  bootstrap_test.go  go.mod  library_panels.go  library_panels_test.go  metric_deps.go  metric_deps_test.go  provision_dashboards.go  provision_dashboards_test.go  reconcile.go  reconcile_test.go
lib/jwks/: go.mod  jwks.go  jwks_test.go
opencapital-app/: .gitignore  PRODUCT.md  RELEASE.md  grafana-overlay.pin  index.html  package-lock.json  package.json  vite.config.ts
opencapital-app/src/: App.css  App.tsx  api.ts  main.tsx  queries.ts  types.ts  updater-core.test.ts  updater-core.ts  updater.ts
opencapital-app/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  entitlements.plist  tauri.bundle.conf.json  tauri.conf.json  tauri.macos.conf.json
opencapital-app/src-tauri/resources/: config.json
opencapital-app/src-tauri/src/: compute.rs  config.rs  dataplane.rs  grafana.rs  kinde.rs  lib.rs  main.rs  proxy.rs  runtime.rs  wsl.rs
opencapital-app/src-tauri/src/catalog/: manifest.rs  mod.rs  registry.rs  sources.rs
opencapital-app/src-tauri/src/reconcile/: dashboards.rs  download.rs  library_panels.rs  mod.rs  provision.rs
plugins/: core-app.json  core-datasource.json  yfinance-app.json
schemas/: TOPICS.tsv  data.v2.avsc  portfolio_events.payload.md  portfolio_events.v2.avsc
scripts/: dump_topics_tsv.py  register-schemas.sh  risingwave_parity.py  rw_golden_nav.sh
scripts/release/: app.releaserc.json  oc-plugin-version-prepend.sh  oc-plugin-version-prepend.test.sh  plugin.releaserc.json  write-tauri-version.sh  write-tauri-version.test.sh
services/compute/: compute.spec  freeze-requirements.txt  main.py  pyproject.toml
services/control-plane/: .dockerignore  Dockerfile  go.mod  go.sum
services/gateway/: .dockerignore  Dockerfile  go.mod  go.sum
services/read-gateway/: Dockerfile  go.mod  go.sum
(+243 files in other folders)
