[project]
name = "opencapital"
version = "0.1.0"
description = "OpenCapital — fully-local desktop portfolio analytics (Tauri shell + local data plane)"
requires-python = ">=3.14"
dependencies = [
  "confluent-kafka>=2.5,<3",
  "fastavro>=1.9,<2",
  "psycopg[binary]>=3.2,<4",
  "questdb>=2.0,<3",
  "numpy>=2.0,<3",
  "scipy>=1.13,<2",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.0,<3",
  "structlog>=24.1,<25",
  "simplefix>=1.0,<2",
  "opentelemetry-api>=1.27,<2",
  "opentelemetry-sdk>=1.27,<2",
  "opentelemetry-exporter-otlp>=1.27,<2",
  "opentelemetry-instrumentation>=0.48b0,<1",
  "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
  "opentelemetry-instrumentation-asgi>=0.48b0,<1",
  "opentelemetry-instrumentation-logging>=0.48b0,<1",
  "redis>=5.0,<6",
  "urllib3>=2,<3",
  "polars>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-timeout>=2.3,<3",
  "ruff>=0.5,<1",
  "pyinstaller>=6,<7",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

# Root project is a dev-environment dependency set only (the Python code lives in
# services/compute, imported via tool.pytest pythonpath). No importable package at
# the root, so declare none — `packages = ["lib"]` referenced a dir that never existed
# and broke `pip install -e ".[dev]"`.
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["opencapital-app/node_modules", "opencapital-app/dist"]

[tool.pytest.ini_options]
pythonpath = [".", "services/compute"]
timeout = 30
timeout_method = "thread"
markers = [
  "integration: requires a running local data plane (postgres, risingwave)",
  "freeze: requires the frozen compute binary (slow; run via make compute-smoke)",
]
testpaths = [
  "services/compute/tests",
]
